parser/tests/bad/for01-4.st
% range of a 'for' statement must have type 'int'
%   increasing, id, end

for i: 1..3.0
  % empty
end for
